[ General ] » CRUD en proceso

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,45 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  
   <title>Diccionario</title>
+
   <base href="/">
+  
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- ─────────── -->
+  <!--     CSS     -->
+  <!-- ─────────── -->
+
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="./assets/css/animate.css">
+
+  <!-- Bootstrap 4 CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+  <!-- Font Awesome 4.7 CDN -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
+
   <app-root></app-root>
+
+  <!-- Font Awesome 5 CDN -->
+  <script src="https://kit.fontawesome.com/1ba00c8269.js"></script>
+
+  <!-- jQuery CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- Popper JS CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+  <!-- Bootstrap 4 CDN -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  
 </body>
 </html>
