--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   
   <title>Diccionario</title>
 
-  <base href="/">
+  <base href="">
   
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
