[ General ] » Eliminado el fichero de pruebas del componente principal. Estilos del formulario del login actualizados. Fuente 'Nunito' incorporada vía CDN

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 
   <!-- Google Fonts CDN -->
   <link href="https://fonts.googleapis.com/css?family=Arsenal:400,700&display=swap"                             rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600,700,800,900&display=swap"          rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
   <!-- Font Awesome 4.7 CDN -->
