[ Fichero 'index.html' ] » Actualizar la ruta del plugin AnimateCSS completado

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <!-- ─────────── -->
 
   <!-- Animate.css -->
-  <link rel="stylesheet" href="./assets/css/animate.css">
+  <link rel="stylesheet" href="./assets/styles/animate.css">
 
   <!-- Bootstrap 4 CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
